--- a/Assests/style.css
+++ b/Assests/style.css
@@ -1,10 +1,10 @@
 .body{
     background-image: url("../Assests/pictures/background.jpeg");
 }
-.header{
+/* .header{
     max-height: 100%;
 
-}
+} */
 #nav-bar-container{
     background-color: darkseagreen;
     
@@ -17,15 +17,20 @@
 }
 
 #home-banner {
-    background-image: url('../Assests/pictures/home_banner.png');
-    height: 750px;
+    background-image: url('../Assests/pictures/background.jpeg');
+    /* height: 750px; */
+    min-width: 100%;
+}
+
+#home-banner-img {
+    min-width: 100%;
 }
 
 #home-banner-text {
-    max-height: 750px;
-    /* background-color: rgba(0, 0, 0, 0.6); */
-    margin-top: 600px;
-}
+    /* max-height: 500px; */
+    background-color: rgba(0, 0, 0, 0.6);
+    margin-top: 0px;
+} 
 
 /* #home-banner-text-column {
     height: 750px;
